# oxide

./: Cargo.toml  README.md  build.rs
core/: Cargo.toml
core/src/: allocator.rs  buffer.rs  context.rs  descriptor.rs  device.rs  drawable.rs  lib.rs  material.rs  pipeline.rs  renderer.rs  shader.rs  shadowmap.rs  swapchain.rs  texture.rs  ubo.rs  utils.rs  vertex.rs
geometry/: Cargo.toml
geometry/src/: cube.rs  cube_sphere.rs  lib.rs
math/src/: lib.rs  mat2x2.rs  mat3.rs  mat3x3.rs  mat4.rs  mat4x4.rs  misc.rs  quaternion.rs  transform.rs  vec2.rs  vec3.rs
physics/: Cargo.toml
physics/src/: collider.rs  collision.rs  lib.rs  rigidbody.rs  world.rs
shaders/: frag.glsl  frag.spv  shadow.glsl  shadow.spv  vert.glsl  vert.spv
src/: app.rs  camera.rs  cube.rs  main.rs  object.rs  scene.rs  triangle.rs
