[package]
name = "oxide"
version = "0.1.0"
edition = "2024"

[dependencies]
ash = "0.38.0"
ash-window = "0.13.0"
env_logger = "0.11.8"
log = "0.4.27"
winit = "0.30.11"
anyhow = "1.0.102"

math = { path = "./math" }
physics = { path = "./physics" }
engine-core = { path = "./core" }
geometry = { path = "./geometry" }


[build-dependencies]
#shaderc = { version = "0.9.1", features = ["build-from-source"] }
